# InstaMAT2Remix

./: .gitignore  CHANGES_SUMMARY.md  README.md  TESTING_GUIDE.md
.cursor/rules/: update-readme.mdc
InstaMAT2Remix/: CExports.cpp  CMakeLists.txt  DiagnosticsDialog.cpp  DiagnosticsDialog.h  ExternalTools.cpp  ExternalTools.h  GuiManager.cpp  GuiManager.h  InstaMAT2Remix.IMP  InstaMAT2Remix.exp  InstaMAT2Remix.lib  InstaMATAPI.h  InstaMATPluginAPI.h  Logger.cpp  Logger.h  PluginInfo.h  PluginMain.cpp  PluginPaths.cpp  PluginPaths.h  README.md  RemixConnector.cpp  RemixConnector.h  RemixNodes.cpp  RemixNodes.h  SettingsDialog.cpp  SettingsDialog.h  Utils.h  build_plugin.ps1  rtx_remix_connector.py  watch_and_build.ps1
InstaMAT2Remix/build_old_20260120_021517/: ALL_BUILD.vcxproj  CMakeCache.txt  InstaMAT2Remix.sln  InstaMAT2Remix.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake
InstaMAT2Remix/build_old_20260120_021517/InstaMAT2Remix.dir/Release/InstaMAT2Remix.tlog/: CL.command.1.tlog
InstaMAT2Remix/build_old_20260120_021517/InstaMAT2Remix_autogen/include_Release/EWIEGA46WW/: moc_GuiManager.cpp.d  moc_RemixConnector.cpp  moc_RemixConnector.cpp.d  moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d
InstaMAT2Remix/build_old_20260120_021517/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tests/: test_rtx_remix_connector.py
